--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,16 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M9</version>
+        <configuration>
+          <parallel>classes</parallel>
+          <threadCount>3</threadCount>
+          <useUnlimitedThreads>false</useUnlimitedThreads>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
