--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,13 @@
     </dependency>
     <dependency>
       <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-java-commons</artifactId>
+      <version>2.29.1</version>
+    </dependency>
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
       <artifactId>allure-junit5</artifactId>
-      <version>2.29.1</version> <!-- alebo najnovšiu -->
+      <version>2.29.1</version>
     </dependency>
   </dependencies>
 </project>
