--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,14 @@
           <useModulePath>false</useModulePath>
         </configuration>
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>15</source>
+                <target>15</target>
+            </configuration>
+        </plugin>
     </plugins>
   </build>
 
