--- a/pom.xml
+++ b/pom.xml
@@ -92,5 +92,15 @@
       <artifactId>aspectjweaver</artifactId>
       <version>1.9.21.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>5.3.30</version>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.33</version>
+    </dependency>
   </dependencies>
 </project>
